@@ -4,6 +4,8 @@
       improvements and accompanying test coverage.
     - Flatten split results when splitting arrays of booleans to avoid nested
       arrays of single-element strings.
+    - Flatten split results for mixed arrays so string splits no longer remain
+      nested inside the parent array.
 
 1.91  2026-01-05
 
